pages/documents/sso-foundry/ssl-with-lets-encrypt/letsencrypt-ingress-route.yaml

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: letsencrypt-ingress-route
  namespace: service-foundry
spec:
  entryPoints:

    - web
    - websecure

  routes:

    - match: Host(`sfapp.servicefoundry.ca`) && PathPrefix(`/api`)
      kind: Rule
      services:
        - name: service-foundry-app-backend
          port: http
      middlewares:
        - name: cors-headers
        #- name: forward-auth

        - name: api-stripprefix

    - match: Host(`sfapp.servicefoundry.ca`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: service-foundry-app-frontend
          port: http
      middlewares:
        - name: cors-headers
        #- name: forward-auth



  tls:
    secretName: servicefoundry-ca-tls
